<resources>
    <string name="app_name">ShoeStore</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="shoe_store_name">Shoe!</string>
    <string name="welcome_to_this_awesome_shoe_store_app_here_you_will_find_a_list_of_shoes_so_you_can_keep_track_of_your_favourite_ones_enjoy">Welcome to this awesome Shoe Store App! Here you will find a list of Shoes so you can keep track of your favourite ones. Click the button to find out more about this show world. Enjoy!</string>
    <string name="welcome_to_shoe">Welcome to Shoe!</string>
    <string name="see_the_instructions">See the instructions</string>
    <string name="login_error_toast">Please, fill your email and password</string>
    <string name="text_instructions">In the following screen you will be able to see all shoes available in store. You can also add new shoes items.</string>
    <string name="button_go_to_shoe_list">Show me the shoes!</string>
    <string name="instructions_title">Instructions</string>
    <string name="plus_fab_content_description">Add new shoe</string>
    <string name="shoe_detail_title">New shoe</string>
    <string name="shoe_name_hint">Shoe name</string>
    <string name="company_hint">Company</string>
    <string name="size_hint">Size</string>
    <string name="description_hint">Description</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
</resources>
