<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="8dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="8dp"
        app:srcCompat="@android:drawable/star_big_on" />

    <TextView
        android:id="@+id/textShoeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/shoe_name_hint"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/company_hint"
        app:layout_constraintStart_toStartOf="@+id/textShoeName"
        app:layout_constraintTop_toBottomOf="@+id/textShoeName" />

    <TextView
        android:id="@+id/textShoeSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/size_hint"
        app:layout_constraintStart_toStartOf="@+id/textShoeName"
        app:layout_constraintTop_toBottomOf="@+id/textCompany" />

    <TextView
        android:id="@+id/textShoeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/description_hint"
        app:layout_constraintStart_toStartOf="@+id/textShoeName"
        app:layout_constraintTop_toBottomOf="@+id/textShoeSize" />


</androidx.constraintlayout.widget.ConstraintLayout>